<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/key_line_1"
    android:background="@color/teal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/key_line_1"
        android:layout_marginTop="@dimen/key_line_1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_dialog_image"
        app:srcCompat="@drawable/vec_medal"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/key_line_1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/key_line_1_d2"
        android:layout_marginStart="@dimen/key_line_1"
        android:layout_marginEnd="@dimen/key_line_1"
        android:textAllCaps="true"
        android:textSize="@dimen/text_large"
        tools:text="@string/format_your_score_is_d"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_pink"
            android:gravity="center"
            android:padding="@dimen/key_line_1"
            android:text="@string/exit"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"/>

        <TextView
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_teal_dark"
            android:gravity="center"
            android:padding="@dimen/key_line_1"
            android:textAllCaps="true"
            android:textSize="@dimen/text_big"
            tools:text="@string/replay"/>
    </LinearLayout>

</LinearLayout>